style.css
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  color: white;
}

body {
  background: rgb(20, 20, 20);
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  flex-direction: column;
  position: relative;
}

.select {
  display: flex;
}

button {
  background: none;
  border: 1px solid white;
  padding-inline: 1em;
  padding-block: 0.2em;
  border-radius: 5px;
  cursor: pointer;
}

.start {
  position: absolute;
  z-index: 2;
}

#text {
  display: flex;
}

